更新内容： 1. 修复了一些错误。现在需要访问网关端口，来调用接口，网关会自己路由请求到接口上，网关会进行第一层过滤，初步验证token，后期可以把token存redis，只需要比较一下是否相等，相等则放行，优化验证token的等待时间。